@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 30-01-2006 fixed: detection of invalid highlights didn't see button 0 as invalid
+ - 30-01-2006 added: auto disable unsupported streams in dvdplayer
+ - 30-01-2006 changed: subtitle stream selection to work same as audio stream selection in dvdplayer
  - 30-01-2006 changed: settings are only saved on app exit if settings.xml exists.
  - 30-01-2006 changed: If less than 4 lines are active on the LCD, the others are blanked out, and whitespace in the xml file should now be respected.
  - 29-01-2006 fixed: playing dts streams in dvdplayer resulted in almost only noise
